Updated DLL Test

--- a/diamondhsm-cng-ksp/diamondhsm-cng-ksp.vcxproj.filters
+++ b/diamondhsm-cng-ksp/diamondhsm-cng-ksp.vcxproj.filters
@@ -32,6 +32,9 @@
     <ClCompile Include="dllmain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="diamondhsm-cng-ksp.h">
+      <Filter>Header Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="diamondhsm-cng-ksp.def">
