--- a/diamondhsm-cng-ksp/diamondhsm-cng-ksp.vcxproj.filters
+++ b/diamondhsm-cng-ksp/diamondhsm-cng-ksp.vcxproj.filters
@@ -21,6 +21,12 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="diamondhsm-ksp.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="internal.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -34,6 +40,12 @@
     </ClCompile>
     <ClCompile Include="diamondhsm-cng-ksp.h">
       <Filter>Header Files</Filter>
+    </ClCompile>
+    <ClCompile Include="dkey_ksp_helper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="internal.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
