--- a/diamondhsm-cng-ksp/diamondhsm-cng-ksp.vcxproj
+++ b/diamondhsm-cng-ksp/diamondhsm-cng-ksp.vcxproj
@@ -165,6 +165,7 @@
   <ItemGroup>
     <ClInclude Include="diamondhsm-ksp.h" />
     <ClInclude Include="internal.h" />
+    <ClInclude Include="pkcs11-types.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
