--- a/diamondhsm-cng-ksp/diamondhsm-cng-ksp.vcxproj.filters
+++ b/diamondhsm-cng-ksp/diamondhsm-cng-ksp.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="internal.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="pkcs11-types.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
