--- a/diamondhsm-cng-ksp/diamondhsm-cng-ksp.vcxproj.filters
+++ b/diamondhsm-cng-ksp/diamondhsm-cng-ksp.vcxproj.filters
@@ -30,6 +30,15 @@
     <ClInclude Include="pkcs11-types.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="pkcs11.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="pkcs11t.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="pkcs11f.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -48,6 +57,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="internal.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="pkcs11.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
