--- a/diamondhsm-cng-ksp/diamondhsm-cng-ksp.vcxproj
+++ b/diamondhsm-cng-ksp/diamondhsm-cng-ksp.vcxproj
@@ -165,6 +165,7 @@
   <ItemGroup>
     <ClInclude Include="diamondhsm-ksp.h" />
     <ClInclude Include="internal.h" />
+    <ClInclude Include="pkcs11-attributes.h" />
     <ClInclude Include="pkcs11.h" />
     <ClInclude Include="pkcs11-types.h" />
     <ClInclude Include="pkcs11f.h" />
@@ -178,7 +179,7 @@
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="diamondhsm-cng-ksp.h" />
     <ClCompile Include="internal.cpp" />
-    <ClCompile Include="pkcs11.c" />
+    <ClCompile Include="pkcs11.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
