--- a/diamondhsm-cng-ksp/diamondhsm-cng-ksp.vcxproj
+++ b/diamondhsm-cng-ksp/diamondhsm-cng-ksp.vcxproj
@@ -172,6 +172,7 @@
     <ClInclude Include="pkcs11t.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="tfm.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="diamondhsm-cng-ksp.cpp" />
@@ -180,12 +181,14 @@
     <ClCompile Include="diamondhsm-cng-ksp.h" />
     <ClCompile Include="internal.cpp" />
     <ClCompile Include="pkcs11.cpp" />
+    <ClCompile Include="rsa.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="tfm.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="diamondhsm-cng-ksp.def" />
