--- a/diamondhsm-cng-ksp/diamondhsm-cng-ksp.vcxproj.filters
+++ b/diamondhsm-cng-ksp/diamondhsm-cng-ksp.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="tfm.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="constants.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -72,6 +75,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="rsa.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="pkcs11-keygen.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
